--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.1",
+    "axios": "^0.19.0",
     "google-maps-react": "^2.0.2",
     "ionicons": "^4.6.3",
     "react": "^16.9.0",
