--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@expo/vector-icons": "^10.0.5",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/google-maps": "^5.0.0-beta.27",
+    "@ionic/pwa-elements": "^1.4.1",
     "@ionic/react": "^4.9.0-rc.2",
     "@ionic/react-router": "^4.9.0-rc.2",
     "@types/jest": "24.0.18",
@@ -18,6 +19,8 @@
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.1",
     "axios": "^0.19.0",
+    "cordova-android-support-gradle-release": "^3.0.1",
+    "dotenv": "^8.1.0",
     "google-maps-react": "^2.0.2",
     "ionicons": "^4.6.3",
     "react": "^16.9.0",
