--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-ionicons": "^3.0.1",
+    "react-mic": "^12.4.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
