funziona piu o meno tranne agents

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-  "appId": "com.project.arcana",
-  "appName": "arcana",
+  "appId": "io.ionic.starter",
+  "appName": "inv_fac",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "build"
