--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@expo/vector-icons": "^10.0.5",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/google-maps": "^5.0.0-beta.27",
+    "@ionic/pwa-elements": "^1.4.1",
     "@ionic/react": "^4.9.0-rc.2",
     "@ionic/react-router": "^4.9.0-rc.2",
     "@types/jest": "24.0.18",
@@ -22,6 +23,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-ionicons": "^3.0.1",
+    "react-mic": "^12.4.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
