--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.19.0",
     "google-maps-react": "^2.0.2",
     "ionicons": "^4.6.3",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-ionicons": "^3.0.1",
